# ag_kaggle_5day_pub

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.nginx  GEORGE.md  README.md  STYLE_GUIDE.md  conftest.py  deploy.env.template  docker-compose.cloudrun.yml  docker-compose.yml  make_py_project.sh  pyproject.toml  requirements.txt  service.yaml.template
.agents/rules/: call_workflow.md
.agents/rules/architecture/: general-patterns.instructions.md
.agents/rules/backend/: api-design.instructions.md  backend-apis.instructions.md
.agents/rules/cpp/: modern-cpp.instructions.md
.agents/rules/csharp/: blazor-wasm.instructions.md  csharp-dotnet.instructions.md
.agents/rules/data/: sql-standards.instructions.md
.agents/rules/docs/: markdown-standards.instructions.md  spec_report.md
.agents/rules/frontend/: nextjs-react.instructions.md  web-frontend.instructions.md
.agents/rules/go/: go-standards.instructions.md
.agents/rules/ops/: ci-cd.instructions.md  docker.instructions.md  iac-standards.instructions.md  (+1 more)
.agents/workflow_templates/: README.md  dispatcher.template.agent.md  george.template.agent.md  git-manager.template.agent.md  quartermaster.template.agent.md  tester.template.agent.md  the-architect.template.agent.md  the-chronicler.template.agent.md  the-tyler.template.agent.md  the-warden.template.agent.md  trowel.template.agent.md
.agents/workflows/: core-specialist.agent.md  dispatcher.agent.md  frontend-specialist.agent.md  george.agent.md  git-manager.agent.md  quartermaster.agent.md  scraper-agent-specialist.agent.md  tester.agent.md  the-architect.agent.md  the-chronicler.agent.md  the-deacon.agent.md  the-secretary.agent.md  the-trestleboard.agent.md  the-tyler.agent.md  the-warden.agent.md  trowel.agent.md
docker/nginx/: nginx.cloudrun.conf  nginx.local.conf
docs/: architectural_vision.md  audit_remediation_plan.md  data_pipeline.md  database_operations.md  deployment_guide.md  kaggle_submission_writeup_final.md  mermaid_architecture.html  public_repo_prep.md  users_guide.md
memories/session/: implementation_plan.md  team_blueprint.md  workspace_dossier.md
scripts/: deploy_job.sh  deploy_non_interactive.sh  deploy_wizard.sh  gen_certs.sh  scan_secrets.py
src/: __init__.py  agent.py  requirements.txt
src/ag_kaggle_5day/: app.py  config.py  cron.py  logging_config.py  main.py  models.py  security.py  workflow_init.py
tests/: test_agents.py  test_cron.py  test_forecast.py  test_gcp_integration.py  test_main.py  test_youtube_integration.py
(+190 files in other folders)
